# pruna

./: pyproject.toml
src/pruna/algorithms/: gptq_model.py  half.py  hqq.py  huggingface_llm_int8.py  kvpress.py  llm_compressor.py  moe_kernel_tuner.py  quanto.py  sage_attn.py  torchao.py
src/pruna/algorithms/torch_compile/: torch_compile.py
src/pruna/config/: smash_config.py
tests/: conftest.py
tests/algorithms/testers/: kvpress.py
